Add full support for Selenium 4. Downgrade to JDK17